# PitchDetectionTester

./: .gitignore  CMakeLists.txt  README.md  build.bat  context.md  setup.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/PitchDetectionAlgorithms/: ExampleNewAlgorithm.h  FFTPitchDetector.cpp  FFTPitchDetector.h  PitchDetector.h  YinPitchDetector.cpp  YinPitchDetector.h
Source/Statistics/: StatisticsManager.cpp  StatisticsManager.h
Source/UI/: StatisticsDisplay.cpp  StatisticsDisplay.h
